app/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: keda
  labels:
    name: python-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    alb.ingress.kubernetes.io/healthcheck-path: /ping
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: python-app
